# please-practice

./: .gitignore  .plzconfig  README.md  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  turbo.json
.husky/: pre-commit
apps/gohello/: Dockerfile  main.go  package.json
apps/gohello/scripts/: build.go
apps/jshello/: Dockerfile  main.js  package.json  tsconfig.json
apps/pyhello/: BUILD  Dockerfile  build.go  main.py  package.json
data/: greetings.json
imports/python/: BUILD
notebooks/: car-insurance.ipynb  layoffs.ipynb
plz/python/: BUILD
scripts/pre-commit/: git.go  interjections.go  ipynb.go  main.go
src/: BUILD  main.py
src/greetings/: BUILD  greetings_test.py
