[tool.poetry]
name = "please-practice"
version = "0.1.0"
description = ""
authors = ["Joshua Sprow <42551798+joshuasprow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
