[tool.poetry]
name = "please-practice"
version = "0.1.0"
description = ""
authors = ["Joshua Sprow <42551798+joshuasprow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
